fix docs dark mode

--- a/docs/.vuepress/styles/colors.styl
+++ b/docs/.vuepress/styles/colors.styl
@@ -39,37 +39,37 @@
 
 @media (prefers-color-scheme: dark)
   :root {
-  --border-normal: #d3dae4;
-  --border-subdued: #f0f4f9;
+  --border-normal: #455a64;
+  --border-subdued: #2e3f47;
 
-  --background-page: #ffffff;
-  --background-normal: #f0f4f9;
-  --background-normal-alt: #e4eaf1;
-  --background-highlight: #f7f9fd;
-  --background-subdued: #f7fafc;
+  --background-page: #263238;
+  --background-normal: #2e3c43;
+  --background-normal-alt: #3a4b53;
+  --background-highlight: #2d3a41;
+  --background-subdued: #2d3a41;
 
-  --foreground-normal: #4f5464;
-  --foreground-normal-alt: #172940;
-  --foreground-subdued: #a2b5cd;
-  --foreground-inverted: #fff;
+  --foreground-normal: #b3c4cc;
+  --foreground-normal-alt: #cfd8dc;
+  --foreground-subdued: #697a83;
+  --foreground-inverted: #263238;
 
   --primary-light: #ddddff;
   --primary: #6644ff;
-  --primary-dark: #4422dd;
+  --primary-dark: #7760ff;
 
   --secondary-light: #ffeeff;
   --secondary: #ff99dd;
-  --secondary-dark: #ff77bb;
+  --secondary-dark: #ffaaee;
 
-  --success-light: #e6faf5;
+  --success-light: #294a4b;
   --success: #00c897;
-  --success-dark: #0ca582;
+  --success-dark: #40d6b1;
 
-  --warning-light: #fff7e6;
+  --warning-light: #43483c;
   --warning: #ffb300;
-  --warning-dark: #cb9511;
+  --warning-dark: #ffc640;
 
-  --danger-light: #fceef0;
+  --danger-light: #403e47;
   --danger: #e35169;
-  --danger-dark: #b64c60;
+  --danger-dark: #ea7d8f;
 }
